# ESP32_C5_Hub_Rev0

./: .gitignore  CMakeLists.txt  sdkconfig
components/ethernet_init/: CMakeLists.txt  Kconfig.projbuild  ethernet_init.c
components/led_init/: CMakeLists.txt  Kconfig.projbuild  led_init.c  led_init.h  status_rgb_ws2812.c
components/sub_init/: CMakeLists.txt  Kconfig.projbuild  sub_init.c  sub_init.h
main/: CMakeLists.txt  Kconfig.projbuild  console.c  hub_pairing.c  hub_pairing.h  main.c
